configure.

****************************************************************************
*                          Library                                         *
****************************************************************************


QtWidgets
---------

- QAbstractScrollArea now has a SizeAdjustPolicy. If it is set to AdjustToContents
  it will make use of the new protected viewportSizeHint() (binary compatible since it
  was reserved in Qt5). This function returns a suggested size based on contents.

- QTreeView now has setTreePosition to allow the treestructure to show data from other
  columns than logicalindex zero.

- [QTBUG-4206] QTableView resizeToContents will now adjust to actual contents
  and not just visible area. QHeaderView::setAutoResizePrecision() has been
  introduced to control how precise the autoResize should be.

- QFileDialog::setDefaultSuffix() removes leading dot characters.

- [QTBUG-34132] QFileDialog does not instantiate widgets if a native dialog
  will be used instead.  Therefore some accessors which previously returned
  unused objects will now return null.  As before, you can set the
  DontUseNativeDialog option to ensure that widgets will be created and used instead.

- QSizePolicy got a retainSizeWhenHidden attribute.

- [QTBUG-31602] QSpinBox size calculation will now be fixed when stylesheets are
  used.

QtCore
------
- [QTBUG-30250] QTime, QDateTime:
  When calling QTime::toString(Qt::TextDate) and QTime::toString(Qt::ISODate),
  milliseconds are now included in the returned string. This also applies to
  QDateTime::toString(Qt::TextDate) and QDateTime::toString(ISODate).

- QtAlgorithms
  With STL no longer being optional for building and using Qt, a number of parts
  of QtAlgorithms no longer make sense, and have therefore been deprecated.

  Replacements are available in the STL, and generally have much better
  performance, but are not instantly source-compatible in all cases. For