@@ -118,8 +118,6 @@ public:
 
     void sortByColumn(int column, Qt::SortOrder order);
 
-    QSize viewportSizeHint() const;
-
 public Q_SLOTS:
     void selectRow(int row);
     void selectColumn(int column);
@@ -160,6 +158,8 @@ protected:
     QModelIndexList selectedIndexes() const;
 
     void updateGeometries();
+
+    QSize viewportSizeHint() const Q_DECL_OVERRIDE;
 
     int sizeHintForRow(int row) const;
     int sizeHintForColumn(int column) const;
